commiting changes while NB is running

--- a/CSV Analysis.ipynb
+++ b/CSV Analysis.ipynb
@@ -2,38 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Basic imports\n",
-    "import numpy as np\n",
+    "#Data\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from tqdm import tqdm\n",
+    "#from tqdm import tqdm\n",
     "\n",
-    "#specific imports\n",
+    "#Metrics\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "#Models\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.neural_network import MLPClassifier\n",
     "\n",
     "sns.set()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +53,7 @@
     "df1 = df1.drop('Name', axis=1)\n",
     "df2 = df2.drop('Name', axis=1)\n",
     "\n",
+    "#join the dataframes into 1 dataframe (df3)\n",
     "frames = [df1, df2]\n",
     "df3 = pd.concat(frames)\n",
     "\n",
@@ -64,223 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>READ_CALENDAR</th>\n",
-       "      <th>WRITE_CALENDAR</th>\n",
-       "      <th>CAMERA</th>\n",
-       "      <th>READ_CONTACTS</th>\n",
-       "      <th>WRITE_CONTACTS</th>\n",
-       "      <th>GET_ACCOUNTS</th>\n",
-       "      <th>ACCESS_FINE_LOCATION</th>\n",
-       "      <th>ACCESS_COARSE_LOCATION</th>\n",
-       "      <th>RECORD_AUDIO</th>\n",
-       "      <th>READ_PHONE_STATE</th>\n",
-       "      <th>...</th>\n",
-       "      <th>shareIntent</th>\n",
-       "      <th>readPhoneNumber</th>\n",
-       "      <th>FileInputStream</th>\n",
-       "      <th>getSharedPreferences</th>\n",
-       "      <th>telephony</th>\n",
-       "      <th>getMessageBody</th>\n",
-       "      <th>getDisplayOriginatingAddress</th>\n",
-       "      <th>wallpaper</th>\n",
-       "      <th>crypto</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Benign</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1311</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Ransomware</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1380</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Ransomware</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Benign</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>750</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Benign</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 62 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      READ_CALENDAR  WRITE_CALENDAR  CAMERA  READ_CONTACTS  WRITE_CONTACTS  \\\n",
-       "97                0               0       0              0               0   \n",
-       "1311              1               1       1              1               1   \n",
-       "1380              1               1       1              1               1   \n",
-       "16                0               0       0              0               0   \n",
-       "750               0               0       0              0               0   \n",
-       "\n",
-       "      GET_ACCOUNTS  ACCESS_FINE_LOCATION  ACCESS_COARSE_LOCATION  \\\n",
-       "97               0                     0                       0   \n",
-       "1311             1                     1                       1   \n",
-       "1380             1                     1                       1   \n",
-       "16               0                     0                       0   \n",
-       "750              0                     0                       0   \n",
-       "\n",
-       "      RECORD_AUDIO  READ_PHONE_STATE  ...  shareIntent  readPhoneNumber  \\\n",
-       "97               0                 0  ...            0                0   \n",
-       "1311             1                 1  ...            0                0   \n",
-       "1380             1                 1  ...            0                0   \n",
-       "16               0                 0  ...            0                0   \n",
-       "750              0                 0  ...            0                0   \n",
-       "\n",
-       "      FileInputStream  getSharedPreferences  telephony  getMessageBody  \\\n",
-       "97                  0                     0          0               0   \n",
-       "1311                0                     0          0               0   \n",
-       "1380                0                     0          0               0   \n",
-       "16                  0                    13          0               0   \n",
-       "750                 0                     0          0               0   \n",
-       "\n",
-       "      getDisplayOriginatingAddress  wallpaper  crypto       label  \n",
-       "97                               0          0       0      Benign  \n",
-       "1311                             0          0       0  Ransomware  \n",
-       "1380                             0          0       0  Ransomware  \n",
-       "16                               0          0       5      Benign  \n",
-       "750                              0          0       0      Benign  \n",
-       "\n",
-       "[5 rows x 62 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Visualize data\n",
     "df3.head()\n",
@@ -289,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,49 +85,37 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "array = df3.values\n",
+    "\n",
+    "#All of the non-label columns\n",
     "X = array[:, 0:-1]\n",
+    "\n",
+    "#label column\n",
     "y = array[:, -1]\n",
     "\n",
+    "#Obtain the train/validation datasets on a 80/20 split\n",
+    "#TODO same w/ tenfold cross val\n",
+    "# compare results\n",
     "X_train, X_validation, Y_train, Y_validation = train_test_split(X, y, test_size=0.20, random_state=12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Vin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.7_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python37\\site-packages\\sklearn\\svm\\_base.py:1208: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  ConvergenceWarning,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LR: 0.980533 (0.007019)\n",
-      "LDA: 0.974186 (0.007588)\n",
-      "KNN: 0.980529 (0.005740)\n",
-      "CART: 0.985963 (0.004272)\n",
-      "NB: 0.916226 (0.014301)\n",
-      "SVM: 0.977357 (0.009701)\n",
-      "RF: 0.987320 (0.004440)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Spot Check Algorithms\n",
+    "from sklearn.ensemble import VotingClassifier\n",
+    "\n",
+    "#Spot Check Algorithms\n",
     "models = []\n",
     "models.append(('LR', LogisticRegression(solver='liblinear', multi_class='ovr')))\n",
     "models.append(('LDA', LinearDiscriminantAnalysis()))\n",
     "models.append(('KNN', KNeighborsClassifier()))\n",
     "models.append(('CART', DecisionTreeClassifier()))\n",
-    "models.append(('NB', GaussianNB()))\n",
     "models.append(('SVM', SVC(gamma='auto')))\n",
     "models.append(('RF', RandomForestClassifier()))\n",
+    "models.append(('CNN', MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(5, 2), random_state=16, max_iter = 1000)))\n",
+    "\n",
     "# evaluate each model in turn\n",
     "results = []\n",
     "names = []\n",
@@ -354,45 +129,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make predictions on validation dataset\n",
-    "model = RandomForestClassifier()\n",
+    "model = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(5, 2), random_state=16, max_iter = 1000)\n",
     "model.fit(X_train, Y_train)\n",
     "predictions = model.predict(X_validation)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluate predictions\n",
+    "print(accuracy_score(Y_validation, predictions))\n",
+    "print(confusion_matrix(Y_validation, predictions))\n",
+    "print(classification_report(Y_validation, predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf1 = LogisticRegression(random_state=1)\n",
+    "clf2 = RandomForestClassifier(n_estimators=50, random_state=1)\n",
+    "clf3 = SVC(gamma='auto')\n",
+    "\n",
+    "eclf = VotingClassifier(estimators=[('lr', clf1), ('rf', clf2), ('SVM', clf3)],\n",
+    "                        voting='hard')\n",
+    "\n",
+    "for clf, label in zip(\n",
+    "    [clf1, clf2, clf3, eclf],\n",
+    "    ['Logistic Regression', 'Random Forest', 'SVM', 'Ensemble']):\n",
+    "    scores = cross_val_score(clf, X, y, scoring='accuracy', cv=5)\n",
+    "    print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" %\n",
+    "          (scores.mean(), scores.std(), label))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9945750452079566\n",
-      "[[194   0]\n",
-      " [  3 356]]\n",
+      "0.9801084990958409\n",
+      "[[197   2]\n",
+      " [  9 345]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      Benign       0.98      1.00      0.99       194\n",
-      "  Ransomware       1.00      0.99      1.00       359\n",
+      "      Benign       0.96      0.99      0.97       199\n",
+      "  Ransomware       0.99      0.97      0.98       354\n",
       "\n",
-      "    accuracy                           0.99       553\n",
-      "   macro avg       0.99      1.00      0.99       553\n",
-      "weighted avg       0.99      0.99      0.99       553\n",
-      "\n"
+      "    accuracy                           0.98       553\n",
+      "   macro avg       0.98      0.98      0.98       553\n",
+      "weighted avg       0.98      0.98      0.98       553\n",
+      "\n",
+      "Accuracy: 0.98 (+/- 0.01) [Logistic Regression]\n",
+      "Accuracy: 0.99 (+/- 0.01) [Random Forest]\n",
+      "Accuracy: 0.99 (+/- 0.00) [Dec. Tree]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Vin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.7_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python37\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:549: ConvergenceWarning: lbfgs failed to converge (status=2):\n",
+      "ABNORMAL_TERMINATION_IN_LNSRCH.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "  self.n_iter_ = _check_optimize_result(\"lbfgs\", opt_res, self.max_iter)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.98 (+/- 0.01) [CNN]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Vin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.7_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python37\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:549: ConvergenceWarning: lbfgs failed to converge (status=2):\n",
+      "ABNORMAL_TERMINATION_IN_LNSRCH.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "  self.n_iter_ = _check_optimize_result(\"lbfgs\", opt_res, self.max_iter)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.98 (+/- 0.01) [Ensamble]\n"
      ]
     }
    ],
    "source": [
+    "clf1 = LogisticRegression(random_state=16, max_iter= 1200)\n",
+    "clf2 = RandomForestClassifier(n_estimators=50, random_state=12)\n",
+    "clf3 = DecisionTreeClassifier()\n",
+    "clf4 = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(5, 2), random_state=16, max_iter = 100000)\n",
+    "\n",
+    "eclf = VotingClassifier(estimators=[('lr', clf1), ('rf', clf2), ('dt', clf3), ('cnn', clf4)],\n",
+    "                        voting='hard')\n",
+    "\n",
+    "# Make predictions on validation dataset\n",
+    "model = eclf\n",
+    "model.fit(X_train, Y_train)\n",
+    "predictions = model.predict(X_validation)\n",
+    "\n",
     "# Evaluate predictions\n",
     "print(accuracy_score(Y_validation, predictions))\n",
     "print(confusion_matrix(Y_validation, predictions))\n",
-    "print(classification_report(Y_validation, predictions))"
+    "print(classification_report(Y_validation, predictions))\n",
+    "\n",
+    "for clf, label in zip(\n",
+    "    [clf1, clf2, clf3, clf4, eclf],\n",
+    "    ['Logistic Regression', 'Random Forest', 'Dec. Tree', 'CNN', 'Ensamble']):\n",
+    "    scores = cross_val_score(clf, X, y, scoring='accuracy', cv=5)\n",
+    "    print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" %\n",
+    "          (scores.mean(), scores.std(), label))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#TODO\n",
+    "\n",
+    "Confusion Matrix\n",
+    "Accuracy\n",
+    "Precision/Recall\n",
+    "Macro/W. Avegare\n",
+    "\n",
+    "Add barchart comparisons of features\n",
+    "Feature Engineering / Selection"
    ]
   }
  ],
