--- a/APK Analysis.ipynb
+++ b/APK Analysis.ipynb
@@ -68,7 +68,9 @@
     "methods_to_find = df.functions\n",
     "\n",
     "df = pd.read_csv('perms.csv', engine='python')\n",
-    "perms_to_find   = df.perms"
+    "perms_to_find   = df.perms\n",
+    "\n",
+    "#TODO ADD: public,private,protected for .method .class"
    ]
   },
   {
@@ -116,6 +118,9 @@
     "myList.insert(0, obj('receiver'))\n",
     "fakeList.insert(0, 'receiver')\n",
     "\n",
+    "myList.insert(0, obj('total smalis'))\n",
+    "fakeList.insert(0, 'total smalis')\n",
+    "\n",
     "#   Append the last item (name)\n",
     "myList.append('')\n",
     "fakeList.append('Name')\n",
@@ -138,8 +143,10 @@
     "#   Create empty dataframe\n",
     "df = pd.DataFrame(columns=fakeList)\n",
     "\n",
+    "CSV_NAME = 'ransom_w_class.csv'\n",
+    "\n",
     "#   This clears the CSV if it exists\n",
-    "df.to_csv('newRansom.csv', mode='w', header=True)"
+    "df.to_csv(CSV_NAME, mode='w', header=True)"
    ]
   },
   {
@@ -191,6 +198,8 @@
     "            #if it is a smali file\n",
     "            if('.smali' in file_name):\n",
     "                \n",
+    "                myList[fakeList.index('total smalis')].count += 1\n",
+    "\n",
     "                #print file name\n",
     "                if(verbose == True): print(file_name)\n",
     "\n",
@@ -212,7 +221,7 @@
    "source": [
     "#function saves to csv file\n",
     "def saveToFile(df):\n",
-    "    df.to_csv('newRansom.csv', mode='a', header=False)  "
+    "    df.to_csv(CSV_NAME, mode='a', header=False)  "
    ]
   },
   {
@@ -260,6 +269,7 @@
     "    myList.insert(0, obj('activity'))\n",
     "    myList.insert(0, obj('service'))\n",
     "    myList.insert(0, obj('receiver'))\n",
+    "    myList.insert(0, obj('total smalis'))\n",
     "    myList.append('')"
    ]
   },
@@ -282,7 +292,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1790/1790 [02:00<00:00, 14.91it/s]"
+      "100%|██████████| 1790/1790 [08:15<00:00,  3.62it/s] "
      ]
     },
     {
@@ -304,14 +314,11 @@
     "#This line will clear the DF (call if needed)\n",
     "df = df.iloc[0:0]\n",
     "\n",
-    "#APP = \"wannaLocker\"\n",
-    "\n",
     "direc = \"C:\\\\Users\\\\Vin\\\\Desktop\\\\python-ransomware-analyzer\\\\decompiled_ransomware\\\\\"\n",
     "lim_counter = 0\n",
+    "\n",
     "#   Limits the number of APKs\n",
     "LIMIT = 2200\n",
-    "\n",
-    "#LEN = len(APP) + 1\n",
     "\n",
     "#   Here, filename means folder\n",
     "#   The tqdm is the loading bar library\n",
@@ -342,7 +349,8 @@
     "#saveToFile(df)\n",
     "#print(\"..done! Saved to csv.\")\n",
     "\n",
-    "#1653 done so far"
+    "#823 done so far (wednesday night)\n",
+    "#321 done so far (thurstay night)"
    ]
   },
   {
@@ -371,6 +379,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>total smalis</th>\n",
        "      <th>receiver</th>\n",
        "      <th>service</th>\n",
        "      <th>activity</th>\n",
@@ -380,7 +389,6 @@
        "      <th>READ_CONTACTS</th>\n",
        "      <th>WRITE_CONTACTS</th>\n",
        "      <th>GET_ACCOUNTS</th>\n",
-       "      <th>ACCESS_FINE_LOCATION</th>\n",
        "      <th>...</th>\n",
        "      <th>shareIntent</th>\n",
        "      <th>readPhoneNumber</th>\n",
@@ -397,10 +405,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>23</td>\n",
        "      <td>4</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -421,10 +429,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>46</td>\n",
        "      <td>2</td>\n",
        "      <td>7</td>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -445,10 +453,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>18</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -469,10 +477,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>46</td>\n",
        "      <td>2</td>\n",
        "      <td>7</td>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -493,8 +501,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -541,10 +549,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1785</th>\n",
+       "      <td>46</td>\n",
        "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -565,10 +573,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1786</th>\n",
+       "      <td>62</td>\n",
        "      <td>2</td>\n",
        "      <td>7</td>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -589,9 +597,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1787</th>\n",
+       "      <td>531</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -614,9 +622,9 @@
        "    <tr>\n",
        "      <th>1788</th>\n",
        "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>6</td>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -637,10 +645,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1789</th>\n",
+       "      <td>46</td>\n",
        "      <td>2</td>\n",
        "      <td>7</td>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -661,61 +669,61 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1790 rows × 65 columns</p>\n",
+       "<p>1790 rows × 79 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     receiver service activity READ_CALENDAR WRITE_CALENDAR CAMERA  \\\n",
-       "0           4       2        5             1              1      1   \n",
-       "1           2       7        5             1              1      1   \n",
-       "2           1       1        1             0              0      0   \n",
-       "3           2       7        5             1              1      1   \n",
-       "4           2       1        1             1              1      1   \n",
-       "...       ...     ...      ...           ...            ...    ...   \n",
-       "1785        3       4        4             1              1      1   \n",
-       "1786        2       7        5             1              1      1   \n",
-       "1787        1       0        1             1              1      1   \n",
-       "1788        2       6        5             1              1      1   \n",
-       "1789        2       7        5             1              1      1   \n",
+       "     total smalis receiver service activity READ_CALENDAR WRITE_CALENDAR  \\\n",
+       "0              23        4       2        5             1              1   \n",
+       "1              46        2       7        5             1              1   \n",
+       "2              18        1       1        1             0              0   \n",
+       "3              46        2       7        5             1              1   \n",
+       "4               0        2       1        1             1              1   \n",
+       "...           ...      ...     ...      ...           ...            ...   \n",
+       "1785           46        3       4        4             1              1   \n",
+       "1786           62        2       7        5             1              1   \n",
+       "1787          531        1       0        1             1              1   \n",
+       "1788            2        2       6        5             1              1   \n",
+       "1789           46        2       7        5             1              1   \n",
        "\n",
-       "     READ_CONTACTS WRITE_CONTACTS GET_ACCOUNTS ACCESS_FINE_LOCATION  ...  \\\n",
-       "0                1              1            1                    1  ...   \n",
-       "1                1              1            1                    1  ...   \n",
-       "2                0              0            0                    0  ...   \n",
-       "3                1              1            1                    1  ...   \n",
-       "4                1              1            1                    1  ...   \n",
-       "...            ...            ...          ...                  ...  ...   \n",
-       "1785             1              1            1                    1  ...   \n",
-       "1786             1              1            1                    1  ...   \n",
-       "1787             1              1            1                    1  ...   \n",
-       "1788             1              1            1                    1  ...   \n",
-       "1789             1              1            1                    1  ...   \n",
+       "     CAMERA READ_CONTACTS WRITE_CONTACTS GET_ACCOUNTS  ... shareIntent  \\\n",
+       "0         1             1              1            1  ...           0   \n",
+       "1         1             1              1            1  ...           0   \n",
+       "2         0             0              0            0  ...           0   \n",
+       "3         1             1              1            1  ...           0   \n",
+       "4         1             1              1            1  ...           0   \n",
+       "...     ...           ...            ...          ...  ...         ...   \n",
+       "1785      1             1              1            1  ...           0   \n",
+       "1786      1             1              1            1  ...           0   \n",
+       "1787      1             1              1            1  ...           0   \n",
+       "1788      1             1              1            1  ...           0   \n",
+       "1789      1             1              1            1  ...           0   \n",
        "\n",
-       "     shareIntent readPhoneNumber FileInputStream getSharedPreferences  \\\n",
-       "0              0               0               0                    0   \n",
-       "1              0               0               0                    0   \n",
-       "2              0               0               0                    1   \n",
-       "3              0               0               0                    0   \n",
-       "4              0               0               0                    0   \n",
-       "...          ...             ...             ...                  ...   \n",
-       "1785           0               0               0                   28   \n",
-       "1786           0               0               7                    0   \n",
-       "1787           0               0               7                    0   \n",
-       "1788           0               0               0                    0   \n",
-       "1789           0               0               0                    0   \n",
+       "     readPhoneNumber FileInputStream getSharedPreferences telephony  \\\n",
+       "0                  0               0                    0         0   \n",
+       "1                  0               0                    0         0   \n",
+       "2                  0               0                    1         0   \n",
+       "3                  0               0                    0         0   \n",
+       "4                  0               0                    0         0   \n",
+       "...              ...             ...                  ...       ...   \n",
+       "1785               0               0                   28         5   \n",
+       "1786               0               7                    0         0   \n",
+       "1787               0               7                    0         5   \n",
+       "1788               0               0                    0         0   \n",
+       "1789               0               0                    0         0   \n",
        "\n",
-       "     telephony getMessageBody getDisplayOriginatingAddress wallpaper crypto  \\\n",
-       "0            0              0                            0         0      0   \n",
-       "1            0              0                            0         0      0   \n",
-       "2            0              0                            0         0      0   \n",
-       "3            0              0                            0         0      0   \n",
-       "4            0              0                            0         0      0   \n",
-       "...        ...            ...                          ...       ...    ...   \n",
-       "1785         5              0                            0         0      0   \n",
-       "1786         0              0                            0         0      0   \n",
-       "1787         5              0                            0         0      0   \n",
-       "1788         0              0                            0         0      0   \n",
-       "1789         0              0                            0         0      0   \n",
+       "     getMessageBody getDisplayOriginatingAddress wallpaper crypto  \\\n",
+       "0                 0                            0         0      0   \n",
+       "1                 0                            0         0      0   \n",
+       "2                 0                            0         0      0   \n",
+       "3                 0                            0         0      0   \n",
+       "4                 0                            0         0      0   \n",
+       "...             ...                          ...       ...    ...   \n",
+       "1785              0                            0         0      0   \n",
+       "1786              0                            0         0      0   \n",
+       "1787              0                            0         0      0   \n",
+       "1788              0                            0         0      0   \n",
+       "1789              0                            0         0      0   \n",
        "\n",
        "                                      Name  \n",
        "0     out_00357b0e208c20df3182d54cb2ba15bf  \n",
@@ -730,7 +738,7 @@
        "1788  out_ffaa4f2991c54a35329b43b2de31cc8c  \n",
        "1789  out_ffbed8679d6b25613971295f8d3a4097  \n",
        "\n",
-       "[1790 rows x 65 columns]"
+       "[1790 rows x 79 columns]"
       ]
      },
      "execution_count": 14,
